--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p> A zona de conforto e igual um jardim privado, extremamente lindo, mas nada novo cresce la</p>
+    <p> A melhor maneira de aprender e errando</p>
 </body>
 </html>
