--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p> A zona de conforto e igual um jardim privado, extremamente lindo, mas nada novo cresce la</p>
     <p> A melhor maneira de aprender e errando</p>
+    <p> Voce apenas vive 1 vez, nao perca seu tempo</p>
 </body>
 </html>
